Fixed alignment issue in tables under education(#233) (#434)

--- a/static/css/sections/education.css
+++ b/static/css/sections/education.css
@@ -102,7 +102,9 @@
   border: none;
   color: #212529;
 }
-
+.education-section .taken-courses th.course-name-header{
+  width: 50%;
+}
 .education-section .taken-courses .hidden-course {
   display: none;
   transition: all 1s ease-out;
